  - #5403, [postgis_topology] Fix ValidateTopology(bbox)
           without topology in search_path (Sandro Santilli)
  - #5410, [postgis_raster] ST_Value bilinear resample,
           don't throw an error if Band has no NODATA value
           (Regina Obe)
  - #5385, Postgres malloc assertion fail when
           using pg_cancel_backend with ST_AsMVT
           (Regina Obe, Paul Ramsey)

* Breaking Changes *
    - #5385, Take out interruptability of ST_AsMVT
             as it causes backend crash under intense conditions
            (Regina Obe, Paul Ramsey)


PostGIS 3.2.5
2023/05/29

This version requires PostgreSQL 9.6-15, GEOS 3.6 or higher, and Proj 4.9+
Additional features are enabled if you are running GEOS 3.9+
 (and ST_MakeValid enhancements with 3.10+),
Proj 6.1+, and PostgreSQL 14+.

* Bug Fixes *
  - #5384, Fix crash in ST_AsGML when given id is longer than given prefix
           (Sandro Santilli)
  - #5380, Fix 2.5 upgrades with views using geography based ST_Distance
           (Sandro Santilli)
  - #5106, Fix segfault in ST_RemEdgeNewFace/ST_RemEdgeModFace
           when no edge side-faces are found (Sandro Santilli)
  - #5313, Fix memory access issue in ST_InterpolateRaster (Paul Ramsey)
  - #5338, Dump/Restore of raster table fails on
           enforce_coverage_tile_rast constraint (Regina Obe)
  - #5315, #5318, #5319, #5320, #5342 crashes on infinite coordinates
          (Regina Obe, Paul Ramsey)
  - #5344, Include topology id sequence state in dumps (Sandro Santilli)
  - #5288, ST_LineCrossingDirection multi-cross error (Paul Ramsey)
  - #5347, _ST_BestSRID crashes on ARM with infinite geometries (Regina Obe)
  - #5363, Make ST_ClusterDBScan interruptable (Paul Ramsey)
  - #5378, ST_Buffer(geography) drops SRID (Paul Ramsey)
  - #5331, [postgis_tiger_geocoder] reverse_geocode, prefer addressable ranges
           (Regina Obe, Locance)


PostGIS 3.2.4
2022/11/12

This version requires PostgreSQL 9.6-15, GEOS 3.6 or higher, and Proj 4.9+