@@ -19,6 +19,8 @@ Proj 6.1+, and PostgreSQL 14+.
   - #5385, Postgres malloc assertion fail when
            using pg_cancel_backend with ST_AsMVT
            (Regina Obe, Paul Ramsey)
+ - Fix JsonB casting issue (Paul Ramsey)
+
 
 * Breaking Changes *
     - #5385, Take out interruptability of ST_AsMVT
